# Playerr

./: .gitignore  CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  conan_build.sh  conanfile.txt
.github/ISSUE_TEMPLATE/: bug_report.md
src/: AudioDecoder.cpp  AudioDecoder.hpp  AudioStreamBuffer.cpp  AudioStreamBuffer.hpp  CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  main.cpp
